--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -53,6 +53,7 @@ p{
     font-weight:300px;
     text-decoration: none;
     text-transform: uppercase;
+    transition: all .2s;
 }
 
 .btn-filled:link,
