--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -73,3 +73,37 @@ p{
 .btn-outline:hover{
     background-color:#3b3b3b;
 }
+
+nav{
+    background-color: white;
+    height:5vh;
+    display:flex;
+    justify-content: space-around;
+    
+}
+
+.navigation {
+    list-style: none;
+     margin: 0; 
+    color:black;
+    display:flex;
+    justify-content: end;
+    
+}
+
+.navigation a {
+    text-decoration: none;
+    display: block;
+    padding: 1em;
+    color: black;
+    text-transform: uppercase;
+    
+}
+
+.logo{
+    width:auto;
+    margin-top:20px;
+    margin-left:50px;
+    display:inline-block;
+    margin-bottom:10px;
+}
