--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -153,6 +153,102 @@ section{
     text-align:center;
     text-transform: uppercase;
 }
-.btn-media{
+
+.achievements{
+    background-image:url(img/home_panel2_banner.jpg);
+    background-size:cover;
+    background-position: center;
+    height:80vh;
+}
+
+.achievement-text-box{
+    position:relative;
+    width:500px;
+    top:50%;
+    left:50%;
+    transform: translate(-100%,-50%);
+}
+
+.social{
+    background-image:url(img/home_panel4_banner.jpg);
+    background-size:cover;
+    background-position: center;
+    height:80vh;
+}
+
+.social-text-box{
+    position:relative;
+    width:500px;
+    top:40%;
+    left:40%;
+    transform: translate(-100%,-50%);
+}
+
+.btn-social:link,
+.btn-social:visited{
+    background-color:#6b6b6b;;
+    color:white;
+    margin-bottom:20px;
+    width:500px;
+}
+
+.btn-filled:hover{
+    background-color:#57451f;
+}
+
+.instagram-box{
+    position:relative;
+    background-color: white;
+    top:-60%;
+    left:50%;
+    width:410px;
+    height:410px;
+    padding:50px;
+    box-shadow: 0px 1px 15px #999;
+
+}
+.instagram-box p{
+    color:black;
+    margin-bottom:10px;
+    font-size:13px;
+    margin-bottom:0;
+}
+
+.grid{
+    display:grid;
+    grid-template-columns: repeat(2, 150px);
+    justify-items: center;
+    grid-gap: 10px;
+}
+.grid img{
+    padding:0;
+    margin:0;
+    height:130px;
+}
+
+.footer{
+   background-color:black;
+    color:black;
+    margin-bottom:0;
+
+}
+
+.footerul{
+    list-style: none;
+
+   color:black;
+   display:flex;
+   justify-content: center;
+   background-color:black;
+    width:100%;
+}
+
+.footerul a {
+    text-decoration: none;
+    display: block;
+    padding: 1em;
+    color: white;
+    text-transform: uppercase;
+
     
 }
